# grafana-workshop

./: .gitignore  GRAFANA_CONFIG.md  Makefile  README.md  docker-compose.yml  pyproject.toml
diagrams/: maestro_garcia.py  mg_diagrams.py
nginx/: nginx.conf
prometheus/: prometheus.yml
scripts/: get_data_from_ine.py
