[tool.poetry]
name = "graphana-workshop"
version = "0.1.0"
description = ""
authors = ["jorgegomez <jorgegomez@bmat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
diagrams = "^0.23.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
ruff-lsp = "^0.0.53"
pyright = "^1.1.364"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
